--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#intro">Music</a>
+            </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
@@ -53,7 +56,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
+        <h1 class="mx-auto my-0 text-uppercase">REWRITTEN</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
       </div>
@@ -71,6 +74,40 @@
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
+    </div>
+  </section>
+
+<style>
+  .intro-section {
+    padding: 10rem 0 0;
+  }
+  .intro-video{
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%;
+      display: block;
+    }
+    .intro-video iframe{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+</style>
+
+  <!-- Video Section -->
+  <section id="intro" class="intro-section text-center bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h2 class="mb-4">MUSIC VIBES</h2>
+            <a href="https://youtu.be/cQhV-PfMoh4">hit the beat</a> </p>
+            <div class="intro-video">
+            <iframe width="100%" src="https://www.youtube.com/embed/cQhV-PfMoh4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+      </div>
     </div>
   </section>
 
