--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
       width: 100%;
       height: 100%;
     }
+
+    .slider img{
+      max-width: 100%;
+    }
 </style>
 
   <!-- Video Section -->
@@ -104,7 +108,12 @@
           <h2 class="mb-4">MUSIC VIBES</h2>
             <a href="https://youtu.be/cQhV-PfMoh4">hit the beat</a> </p>
             <div class="intro-video">
-            <iframe width="100%" src="https://www.youtube.com/embed/cQhV-PfMoh4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/a7fzkqLozwA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="slider">
+              <div><img src="img/Slider/1.jpg"></div>
+              <div><img src="img/Slider/2.jpg"></div>
+              <div><img src="img/Slider/3.jpg"></div>
             </div>
         </div>
       </div>
