--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Vorsprung durch Technik</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">AUDI</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,10 +40,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#intro">Music</a>
+              <a class="nav-link js-scroll-trigger" href="#intro">Slideshow</a>
             </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Showcase</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -181,9 +181,9 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
             <div class="slider">
-              <div><img src="img/Slider/1.jpg"></div>
-              <div><img src="img/Slider/2.jpg"></div>
-              <div><img src="img/Slider/3.jpg"></div>
+              <div><img src="img/Slider/Audi MP -15.jpg"></div>
+              <div><img src="img/Slider/Audi MP Day 2 mood-8.jpg"></div>
+              <div><img src="img/Slider/Audi MP mood-13.jpg"></div>
             </div>
         </div>
       </div>
