--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Vorsprung durch Technik</h1>
+        <h1 class="mx-auto my-0 text-uppercase">AUDI</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">The ultimate driving Machine</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Turn the ignition</a>
       </div>
