--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Showcase</h4>
+            <p class="text-black-50 mb-0">This series of photos was taken in New World Development newly established residential property "Mount Pavilia" in Sai Kung with partnership with Audi for exclusive deals.</p>
           </div>
         </div>
       </div>
