--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/Audi MP mood-2.jpg" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -236,7 +236,7 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Stance</h4>
                 <p class="mb-0 text-white-50">
-                  just look at this R8 Sat there, the mighty R8!
+                  Just look at this R8 Sat there, the mighty R8!
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
@@ -255,7 +255,7 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <h2 class="text-white mb-5">Subscribe to more Audi</h2>
 
           <form class="form-inline d-flex">
             <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
@@ -279,7 +279,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">Mount Pavilia, Sai Kung</div>
             </div>
           </div>
         </div>
@@ -291,7 +291,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">bcept.info@gmail.com</a>
               </div>
             </div>
           </div>
@@ -303,7 +303,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+852 9272 1797</div>
             </div>
           </div>
         </div>
@@ -327,7 +327,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; REWRITTEN 2019
+      Copyright &copy; Audi Bernard 2019
     </div>
   </footer>
 
