--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Photos by Bernard Chung</h2>
-          <p class="text-white-50">copyrighted
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <p class="text-white-50">
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">copyrighted</a>
         </div>
       </div>
       <img src="img/Audi MP mood-2.jpg" class="img-fluid" alt="">
